--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .header-effect {
-  background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.3) 25% 75%, transparent), 
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.3) 25% 75%, rgba(0, 0, 0, 0)), 
   linear-gradient(to bottom, white 55%, gray 55% 65%,  white 65% 100%);
   margin: 0 30px;
 }
